--- a/app/src/main/res/menu/menu_lista_alunos.xml
+++ b/app/src/main/res/menu/menu_lista_alunos.xml
@@ -5,16 +5,16 @@
         android:id="@+id/menu_mapa"
         android:icon="@drawable/ic_mapa"
         android:title="Mapa"
-        android:showAsAction="always" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/menu_receber_provas"
         android:icon="@drawable/ic_receber"
         android:title="Baixar provas"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
     <item
         android:id="@+id/menu_enviar_notas"
         android:icon="@drawable/ic_enviar"
         android:title="Enviar Notas"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
 </menu>
